2010-03-15  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/producers/wms/wms.py:
	Use correct Twisted API to get the push-id value from the
	cookie. Original coding broken on cookie headers that contained more
	than one value, for instance "push-id=0; my-key=foo".
	It has been observed in the field, that sometimes WMS sends headers
	with push-id specified multiple times and with other cookie keys (like
	the google tracker __utma key).

2010-03-04  Sébastien Merle  <sebastien@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/component/producers/wms/asfparse.py:
	* flumotion/component/producers/wms/wms.py:
	* flumotion/component/producers/wms/wms.xml:
	Do not save error dumps by default.
	Added a component property to enable it.

2010-01-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/muxers/asf/Makefile.am:
	* flumotion/component/muxers/asf/asf.xml:
	* flumotion/component/muxers/asf/wizard_gtk.py (added):
	Add a check for the fluasfmuxer so it can be used from the conversion
	Step (See pub:r8454)

2010-01-21  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/muxers/asf/asf.xml:
	Change asf muxer description in wizard
	Closes #6853

2009-12-11  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* env.in:
	Add flumotion's bin directory to the path so we can call flumotion from
	subprojects.
	* flumotion/component/muxers/asf/asf.py:
	Fix pep8 error: remove trailing backspaces.
	* flumotion/component/encoders/wma/wma.xml:
	* flumotion/component/encoders/wmv/wmv.xml:
	* flumotion/component/muxers/asf/asf.xml:
	* flumotion/component/producers/wms/wms.xml:
	Fix and add missing _description attributes

2009-12-07  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion-windowsmedia.spec.in:
	@RELEASE@ no longer gets substituted, use @PACKAGE_VERSION_RELEASE@.
	See r23428.

2009-12-07  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/encoders/wma/wma.py: